--- a/app/src/main/res/layout/fragment_trailer.xml
+++ b/app/src/main/res/layout/fragment_trailer.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/youtube"
+        android:textColor="@color/primary_text"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
@@ -21,5 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
+        android:textColor="@color/secondary_text"
         android:textAppearance="?attr/textAppearanceListItem" />
 </LinearLayout>
