--- a/app/src/main/res/layout-large-land/fragment_movie_info.xml
+++ b/app/src/main/res/layout-large-land/fragment_movie_info.xml
@@ -133,7 +133,7 @@
 
             <TextView
                 android:id="@+id/movie_release_date"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="@dimen/text_content_padding_bottom"
                 android:paddingTop="@dimen/text_content_padding_top"
