--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,17 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/background"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".MainActivity$MainFragment">
 
     <!-- Recycler view to add movies upon search -->
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_movies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycler_view_movies"
-        android:clipToPadding="false"
-        />
+        android:clipToPadding="false" />
 
     <TextView
         android:id="@+id/movie_error_message_display"
@@ -21,13 +21,25 @@
         android:padding="@dimen/sub_heading"
         android:text="@string/error_message_no_resource"
         android:textSize="@dimen/main_heading_size"
-        android:visibility="invisible" />
+        android:visibility="gone"
+        android:layout_centerInParent="true"/>
+
+    <TextView
+        android:id="@+id/no_favorites"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:includeFontPadding="false"
+        android:padding="@dimen/sub_heading"
+        android:text="@string/no_favorites"
+        android:textSize="@dimen/main_heading_size"
+        android:visibility="gone"
+        android:layout_centerInParent="true"/>
 
     <ProgressBar
         android:id="@+id/movie_loading_indicator"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
         style="@style/AppTheme"
-        android:layout_centerInParent="true"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
