--- a/app/src/main/res/layout-land/fragment_movie_info.xml
+++ b/app/src/main/res/layout-land/fragment_movie_info.xml
@@ -74,17 +74,18 @@
 
         <!-- this layout contains title, year, rating and popularity -->
         <LinearLayout
-            android:layout_width="344dp"
+            android:layout_width="440dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             app:layout_constraintLeft_toRightOf="@+id/movie_info_poster"
             app:layout_constraintStart_toEndOf="@id/movie_info_poster"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="207dp">
+            tools:layout_editor_absoluteX="207dp"
+            tools:layout_editor_absoluteY="18dp">
 
             <TextView
                 android:id="@+id/movie_info_title"
