--- a/app/src/main/res/layout-large/fragment_movie_info.xml
+++ b/app/src/main/res/layout-large/fragment_movie_info.xml
@@ -55,18 +55,17 @@
             android:visibility="visible"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/favorite_button" />
+            app:layout_constraintTop_toTopOf="@+id/favorite_button"
+            android:layout_marginTop="8dp" />
 
 
         <!-- this layout contains title, year, rating and popularity -->
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="568dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/movie_info_poster"
